--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "koa-json": "^1.1.1",
     "koa-mount": "^1.3.0",
     "koa-router": "^5.3.0",
+    "koa-send": "^3.1.0",
     "lodash": "^3.10.1",
     "mz": "^2.1.0",
     "sqlite3": "^3.1.1",
