--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "gm": "^1.21.1",
     "knex": "^0.9.0",
     "koa": "^1.1.2",
+    "koa-body": "^1.4.0",
     "koa-bunyan": "0.0.2",
     "koa-cors": "0.0.16",
     "koa-error": "^1.1.3",
     "koa-json": "^1.1.1",
+    "koa-jwt": "^1.1.1",
     "koa-mount": "^1.3.0",
     "koa-router": "^5.3.0",
     "koa-send": "^3.1.0",
