--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "bunyan": "^1.5.1",
     "casing": "^1.0.0",
     "co": "^4.6.0",
+    "co-busboy": "^1.3.1",
     "co-mkdirp": "^0.1.0",
     "co-stream": "^0.1.0",
     "convict": "^1.0.2",
