--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "co-mkdirp": "^0.1.0",
     "co-stream": "^0.1.0",
     "co-walk": "0.0.2",
+    "cofy": "^2.0.2",
     "convict": "^1.0.2",
     "gm": "^1.21.1",
     "knex": "^0.9.0",
