上传资源后，路径应当是相对路径

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "chance": "^0.8.0",
     "gulp": "^3.9.0",
     "gulp-nodemon": "^2.0.4",
+    "longjohn": "^0.2.11",
     "shelljs": "^0.5.3"
   }
 }
