--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "koa-mount": "^1.3.0",
     "koa-router": "^5.3.0",
     "koa-send": "^3.1.0",
+    "koa-slow": "^0.2.0",
     "lodash": "^3.10.1",
     "mv": "^2.1.1",
     "mz": "^2.1.0",
