--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "mv": "^2.1.1",
     "mz": "^2.1.0",
     "rmdir": "^1.1.0",
+    "shelljs": "^0.5.3",
     "sqlite3": "^3.1.1",
     "tmp": "0.0.28",
     "url-join": "0.0.1"
