--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "koa-send": "^3.1.0",
     "koa-slow": "^0.2.0",
     "lodash": "^3.10.1",
+    "moment": "^2.11.1",
     "mv": "^2.1.1",
     "mz": "^2.1.0",
     "rmdir": "^1.1.0",
